CM25 spacing fix

--- a/sitedev/css/global.css
+++ b/sitedev/css/global.css
@@ -3923,6 +3923,7 @@
 		margin: 0;
 		padding: 0;
 		margin-top: -1.0em;
+		margin-bottom: 1.0em;
 	}
 	
 	#moduleCM25 ul a {
